# autophoto

./: .autophoto.rc  .gitignore  MANIFEST.in  README.md  notes.txt  pyproject.toml  requirements.txt  script.py  setup.py
Latex/Default/: 4hhhh.pytex  cover.pytex  five.pytex  five_3hhhhv.pytex  five_3hhvhh.pytex  five_3vhhhh.pytex  four.pytex  four_2hhhh.pytex  main.pytex  one.pytex  six.pytex  six_3hhhhhh.pytex  three.pytex  three_2hh1h.pytex  three_2hhv.pytex  three_2vhh.pytex  three_3vvv.pytex  two.pytex  two_2vv.pytex  two_hh.pytex
autophoto/: .autophoto.rc  main.py
autophoto/Latex/Default/: 4hhhh.pytex  4vvvv.pytex  chapter.pytex  five_3hhhhv.pytex  five_3hhvhh.pytex  five_3vhhhh.pytex  four_2hhhh.pytex  main.pytex  one.pytex  six_3hhhhhh.pytex  text.pytex  three_2hh1h.pytex  three_2hhv.pytex  two_hh.pytex
