[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "autophoto"
version = "0.0.1"
authors = [
  { name="Woolion", email="wooliondrawz@gmail.com" },
]
description = "Quickly generate a photo album with LaTeX."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Le09/autophoto"
"Bug Tracker" = "https://github.com/Le09/autophoto/issues"

